FSAR-19: Navigation - Fix searchbar header overflow

--- a/src/components/general/Header/header.scss
+++ b/src/components/general/Header/header.scss
@@ -123,7 +123,6 @@
     width: 100%;
 
     @media screen and (min-width: $fsa-lg) {
-      display: flex;
       padding-bottom: 0.5rem;
     }
   }
@@ -212,13 +211,14 @@
 
   &__links-item {
     margin-left: 1rem;
+    @media screen and (min-width: $fsa-lg) {
+          margin-left: 0;
+        }
     &--right {
       flex-grow: 1;
+      margin-left: 1rem;
       display: flex;
-      align-items: center;
-      @media screen and (min-width: $fsa-lg) {
-        justify-content: flex-end;
-      }
+      justify-content: flex-end;
     }
 
     &:first-child {
@@ -262,6 +262,9 @@
       margin-right: 0.7rem;
       position: relative;
       top: 0.2rem;
+      @media screen and (min-width: $fsa-lg) {
+        margin-right: 0.3rem;
+      }
     }
 
     &--contact {
